<resources>
    <string name="app_name">Doctor</string>
    <string name="fragment_login_subtitle">You can search course, apply course and find scholarship for abroad studies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_forgot_password_message">Enter your email for the verification proccesss, we will send 4 digits code to your email.</string>
    <string name="fragment_forgot_password_title">Forgot password</string>
    <string name="fragment_forgot_password_email">Email</string>
    <string name="fragment_forgot_password_button">Continue</string>
    <string name="fragment_login_forgot_password">Forgot password</string>
    <string name="fragment_login_create_account">Don’t have an account? Join us</string>
    <string name="fragment_signup_title">Join us to start searching</string>
    <string name="fragment_signup_login">Have an account? Log in</string>
    <string name="activity_profile_screen_title">Set up your profile</string>
    <string name="activity_profile_screen_subtitle">Update your profile to connect your doctor with better impression.</string>
    <string name="activity_profile_screen_title_2">Personal information</string>
    <string name="fragment_login_status_dialog_mensagem">Login e/ou senha inválido!</string>
</resources>