<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_titulo"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="127dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/fragment_signup_title"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/textview_subtitulo"
        android:layout_width="284dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/textview_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/fragment_login_subtitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_google"
        android:background="@drawable/background_external_login_button"
        android:layout_width="160dp"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/textview_subtitulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="78dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="40dp"
        android:text="Google"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_facebook"
        android:background="@drawable/background_external_login_button"
        android:paddingStart="40dp"
        android:layout_width="160dp"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/textview_subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_facebook"
        android:text="Facebook"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        app:layout_constraintTop_toBottomOf="@id/button_google"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        app:layout_constraintTop_toBottomOf="@id/textField_name"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        app:layout_constraintTop_toBottomOf="@id/textField_email"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconDrawable="@drawable/ic_visibility">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        android:background="@drawable/background_main_button"
        android:layout_width="295dp"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@id/textField_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        android:text="Sign Up"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="19dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text=""
        android:textColor="@color/dark_green"/>
    <Button
        android:id="@+id/button_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="19dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/fragment_signup_login"
        android:textColor="@color/dark_green"/>

</androidx.constraintlayout.widget.ConstraintLayout>